# memo_cpp

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  README.txt  launch.vs.json
src/: CMakeLists.txt
src/doyouknow_android/: howtouse_android.drawio
src/doyouknow_android/drawio_backup/: howtouse_android_0627.drawio
src/doyouknow_android/memo_cpp/: CMakeLists.txt  tester_j2c.cpp  tester_j2c.hpp  tester_opencl.cpp  tester_opencl.hpp
src/doyouknow_android/memo_java/: __AndroidManifest.xml  __MainActivity.java  __activity_main.xml  __build.gradle.kts
src/doyouknow_bitfield/: CMakeLists.txt  doyouknow_bitfield.cpp  doyouknow_bitfield.hpp
src/doyouknow_bitwise/: CMakeLists.txt  doyouknow_bitwise.cpp  doyouknow_bitwise.hpp
src/doyouknow_class/: CMakeLists.txt  doyouknow_class.cpp  doyouknow_class.hpp
src/doyouknow_fft/: CMakeLists.txt  doyouknow_fft.cpp  doyouknow_fft.hpp  kaldi_fft.drawio  kaldi_fft_01___3___31___done.drawio  kaldi_fft_02___4___42___done.drawio  kaldi_fft_03___5___53___31___done.drawio  kaldi_fft_04___6___64_53___42_31___done.drawio  kaldi_fft_05___7___75_64_53___53_42_31___31___done.drawio
src/doyouknow_float/lib_make/: CMakeLists.txt  doyouknow_float.cpp  doyouknow_float.hpp  doyouknow_float_std.cpp  doyouknow_float_std.hpp  doyouknow_std_float.cpp  doyouknow_std_float.hpp  libstandard_float.cpp  libstandard_float.hpp
src/doyouknow_float/lib_use/: CMakeLists.txt  doyouknow_float_use.cpp  doyouknow_float_use.hpp  doyouknow_use_float.cpp  doyouknow_use_float.hpp  libuse_float.cpp  libuse_float.hpp
src/doyouknow_function/: CMakeLists.txt  doyouknow_function.cpp  doyouknow_function.hpp
src/doyouknow_kaldi/: CMakeLists.txt
src/doyouknow_kaldi/lib_make/: CMakeLists.txt  doyouknow_kaldi.cpp  doyouknow_kaldi.hpp  doyouknow_std_kaldi.cpp  doyouknow_std_kaldi.hpp  libstandard_kaldi.cpp
src/doyouknow_kaldi/lib_use/: CMakeLists.txt  doyouknow_use_kaldi.cpp  doyouknow_use_kaldi.hpp  libuse_kaldi.cpp  libuse_kaldi.hpp
src/doyouknow_macro/: CMakeLists.txt  doyouknow_macro.cpp  doyouknow_macro.hpp
src/doyouknow_ptr/: CMakeLists.txt  doyouknow_ptr.cpp  doyouknow_ptr.hpp
src/doyouknow_vector/: CMakeLists.txt  doyouknow_vector.cpp  doyouknow_vector.hpp
src/doyouknow_wav/: CMakeLists.txt
src/doyouknow_wav/lib_make/: CMakeLists.txt  doyouknow_wav.cpp  doyouknow_wav.hpp  libstandard_wav.cpp
src/doyouknow_wav/lib_use/: CMakeLists.txt  libuse_wav.cpp  libuse_wav.hpp
